--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
 			margin: 20px;
 			border-radius: 5px;
 		}
+
+		header {
+			border: 2px solid dodgerblue;
+			padding: 20px;
+			margin: 20px;
+			background-color: rgb(175, 238, 238, 0.5);
+			border-radius: 5px;
+		}
+
+		h1 {
+			border: 2px solid rgb(230, 139, 36);
+			padding: 25px;
+			margin: 10px;
+			background-color: white;
+			border-radius: 5px;
+		}
 	</style>
 
 </head>
