--- a/index.html
+++ b/index.html
@@ -28,6 +28,38 @@
 			background-color: white;
 			border-radius: 5px;
 		}
+
+		main {
+			border: 2px solid dodgerblue;
+			padding: 20px;
+			margin: 20px;
+			background-color: rgb(175, 238, 238, 0.5);
+			border-radius: 5px;
+		}
+
+		nav {
+			border: 2px solid darkorchid;
+			padding: 20px;
+			margin: 20px;
+			background-color: rgba(250, 218, 221, 0.5);
+			border-radius: 5px;
+		}
+
+		section {
+			border: 2px solid darkorchid;
+			padding: 20px;
+			margin: 20px;
+			background-color: rgba(250, 218, 221, 0.5);
+			border-radius: 5px;
+		}
+
+		p {
+			border: 2px solid #FF00FF;
+			padding: 30px;
+			margin: 20px;
+			background-color: white;
+			border-radius: 5px;
+		}
 	</style>
 
 </head>
