--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
 			background-color: white;
 			border-radius: 5px;
 		}
+
+		footer {
+			border: 2px solid dodgerblue;
+			padding: 20px;
+			margin: 20px;
+			background-color: rgb(175, 238, 238, 0.5);
+			border-radius: 5px;
+		}
 	</style>
 
 </head>
